# simple-dispatcher-rs

./: Cargo.toml  README.md
src/: lib.rs
src/dispatcher/: dispatcher.rs  mod.rs  request_dispatcher.rs  route_dispatcher.rs
src/executor/: executor.rs  executor_trait.rs  mod.rs
src/request/: mod.rs  request.rs
