[package]
name = "simple-dispatcher"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "simple dispatcher"
repository = "https://github.com/Accurate0/dispatcher-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
